# hgrep

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.git-hooks/: pre-push
.github/workflows/: assets.yaml  ci.yml  release.yml  weekly.yml
HomebrewFormula/: hgrep.rb  update.bash
assets/: README.md
assets-builder/: Cargo.toml  README.md
assets-builder/src/: main.rs
assets/builder/: Cargo.toml  README.md
assets/builder/src/: main.rs
assets/src/: main.rs
bench/: .gitignore  Cargo.toml  README.md  package.json  prepare.bash
bench/benches/: chunk.rs  printer.rs  ripgrep.rs  syntect.rs
bench/src/: lib.rs
hgrep-bench/: Cargo.toml  README.md
hgrep-bench/benches/: chunk.rs  printer.rs  ripgrep.rs  syntect.rs
hgrep-bench/src/: lib.rs
src/: bat.rs  broken_pipe.rs  chunk.rs  grep.rs  io.rs  lib.rs  main.rs  printer.rs  read.rs  ripgrep.rs  syntect.rs  test.rs
testdata/: update_syntect_uitest.bash
testdata/chunk/: before.in  before.out  before_and_after.in  blank_max_bottom.in  blank_min_edge.in  blank_min_max.in  edges_out.in  no_context.out  so_many_neighbors.in  three_chunks.in  three_chunks_joint_all.out  three_chunks_joint_first.out  three_chunks_joint_second.in  top_file_edge.in  top_inner_file_edge.out  two_chunks.out  two_chunks_all_blank_between.in  two_chunks_blank_between.out  two_chunks_contact.in  two_chunks_joint.in  two_chunks_max_blank_between.out  two_chunks_neighbors.in  two_chunks_neighbors.out
testdata/chunk/encoding/: sjis.txt  utf16be_bom.txt  utf16le_bom.txt  utf8.txt  utf8_bom.txt
testdata/grep_lines_to_chunks_per_file/: after.in  after.out  all_blank.in  before_and_after.out  blank_max_bottom.out  blank_max_top.out  blank_min.in  blank_min_max.out  edges.in  min_file_edge.in  min_file_edge.out  no_context.in  no_context.out  one_line.in  one_line.out  single_max.in  single_max.out  so_many_neighbors.out  three_chunks.out  three_chunks_joint_all.in  three_chunks_joint_first.in  three_chunks_joint_second.out  top_file_edge.out  top_inner_file_edge.in  two_chunks.in  two_chunks_blank_between.in  two_chunks_contact.out  two_chunks_max_blank_between.in
testdata/ripgrep/: case_insensitive.txt  fixed_string.txt  multiline.txt  multiline_windows.txt  pcre2.txt
testdata/snapshots/: hgrep__main_tests__no_arg.snap  hgrep__tests__arg_matches__all_printer_opts_after_args.snap  hgrep__tests__arg_matches__all_printer_opts_before_args.snap  hgrep__tests__arg_matches__ascii_lines.snap  hgrep__tests__arg_matches__background.snap  hgrep__tests__arg_matches__bat_doesnt_support_ascii_lines.snap  hgrep__tests__arg_matches__bat_doesnt_support_background.snap  hgrep__tests__arg_matches__bat_printer_long.snap  hgrep__tests__arg_matches__bat_printer_short.snap  hgrep__tests__arg_matches__custom_assets.snap  hgrep__tests__arg_matches__encoding.snap  hgrep__tests__arg_matches__first_only.snap  hgrep__tests__arg_matches__generate_completion_script.snap  hgrep__tests__arg_matches__generate_man_page.snap  hgrep__tests__arg_matches__grid.snap  hgrep__tests__arg_matches__invalid_max_context.snap  hgrep__tests__arg_matches__invalid_min_context.snap  hgrep__tests__arg_matches__invalid_opt_for_syntect.snap  hgrep__tests__arg_matches__invalid_tab_width.snap  hgrep__tests__arg_matches__invalid_term_width.snap  hgrep__tests__arg_matches__invalid_threads.snap  hgrep__tests__arg_matches__list_themes.snap  hgrep__tests__arg_matches__max_filesize.snap  hgrep__tests__arg_matches__min_max_short.snap  hgrep__tests__arg_matches__no_arg.snap  hgrep__tests__arg_matches__no_grid.snap  hgrep__tests__arg_matches__override_options.snap  hgrep__tests__arg_matches__pat_and_dir.snap  hgrep__tests__arg_matches__pat_and_dirs.snap  hgrep__tests__arg_matches__pat_only.snap  hgrep__tests__arg_matches__tab.snap  hgrep__tests__arg_matches__term_width.snap  hgrep__tests__arg_matches__term_width_too_small.snap  hgrep__tests__arg_matches__theme.snap  hgrep__tests__arg_matches__threads.snap  hgrep__tests__arg_matches__type_list.snap  hgrep__tests__arg_matches__unrestricted_once.snap  hgrep__tests__arg_matches__unrestricted_twice_in_single_flag.snap  hgrep__tests__arg_matches__wrap_mode.snap  hgrep__tests__ripgrep_config__bool_long_flags.snap  (+34 more)
testdata/syntect/: ansi16_colors.out  ansi256_colors.out  ascii_lines_grid.out  ascii_lines_no_grid.out  background.out  background.rs  crlf.out  crlf.rs  default.out  emoji.out  emoji.rs  emoji_bg.out  emoji_bg.rs  empty_lines.out  empty_lines_bg.out  empty_lines_bg.rs  first_only.out  hard_tab.out  hard_tab.rs  japanese_background.out  japanese_background.rs  japanese_default.out  list_themes_background.out  list_themes_default.out  list_themes_no_grid.out  long_line.out  long_line.rs  long_line_bg.out  long_line_bg.rs  multi_chunks_bg.out  multi_chunks_bg.rs  multi_chunks_default.out  multi_chunks_no_grid.out  multi_line_numbers.out  multi_line_numbers.rs  multi_regions.out  multi_regions_bg.out  multi_regions_bg.rs  no_grid.out  no_grid_background.out  (+72 more)
