[package]
name = "hgrep"
version = "0.3.8"
edition = "2021"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = """
hgrep is a grep tool with human-friendly search output. This is similar to `-C`
option of `grep` command, but its output is enhanced with syntax highlighting
focusing on human readable outputs.
"""
license = "MIT"
homepage = "https://github.com/rhysd/hgrep#readme"
repository = "https://github.com/rhysd/hgrep"
readme = "README.md"
include = [
    "/assets/themes.bin",
    "/assets/syntaxes.bin",
    "/assets/LICENSE-MIT",
    "/src",
    "/LICENSE.txt",
    "/README.md",
    "/CHANGELOG.md",
]
categories = ["command-line-utilities", "text-processing"]
keywords = ["grep", "search", "syntax-highlighting", "ripgrep", "bat"]

[profile.bench]
lto = "thin"

[profile.release]
lto = "thin"
codegen-units = 1

[[bin]]
name = "hgrep"
path = "src/main.rs"

[workspace]
members = [
    "bench",
    "assets/builder",
]

[features]
default = ["ripgrep", "bat-printer", "syntect-printer"]
ripgrep = ["dep:grep-matcher", "dep:grep-pcre2", "dep:grep-regex", "dep:grep-searcher", "dep:ignore", "dep:regex-syntax", "dep:rayon"]
syntect-printer = ["dep:syntect", "dep:rayon", "dep:unicode-width", "dep:bincode", "dep:flate2", "dep:ansi_colours"]
bat-printer = ["dep:bat", "dep:dirs"]

[dependencies]
anyhow = "1"
clap = { version = "4.5.31", features = ["wrap_help"] }
clap_complete = "4.5.46"
memchr = "2.7.4"
pathdiff = "0.2.3"
terminal_size = "0.4.1"
bat = { version = "^0.26.0", default-features = false, features = ["regex-onig"], optional = true }
grep-regex = { version = "0.1.13", optional = true }
grep-searcher = { version = "0.1.14", optional = true }
ignore = { version = "0.4", optional = true }
regex-syntax = { version = "0.8.5", optional = true }
grep-matcher = { version = "0.1.7", optional = true }
grep-pcre2 = { version = "0.1.8", optional = true }
syntect = { version = "5.2.0", optional = true }
rayon = { version = "1.10.0", optional = true }
unicode-width = { version = "0.2.0", optional = true }
bincode = { version = "1.3.3", optional = true }
flate2 = { version = "1.1.0", optional = true }
ansi_colours = { version = "1.2.3", default-features = false, optional = true }
dirs = { version = "6.0.0", optional = true }
mimalloc = { version = "0.1.43", default-features = false }
clap_mangen = "0.2.26"
clap_complete_nushell = "4.5.5"
shlex = "1.3.0"
encoding_rs = "0.8.35"

[target."cfg(windows)".dependencies]
nu-ansi-term = "0.50.1"
windows-version = "0.1.3"

[target."cfg(not(windows))".dependencies]
terminfo = "0.9.0"

[dev-dependencies]
insta = "1.42.2"
pretty_assertions = "1"
regex = "1.11.1"
set-git-hooks-dir = "1.0.2"

[package.metadata.deb]
copyright = "Copyright (c) 2021 rhysd"
license-file = ["LICENSE.txt", "0"]
assets = [
    ["target/release/hgrep", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/hgrep/README", "644"],
    ["target/release/hgrep.1", "usr/share/man/man1/hgrep.1", "644"],
    ["target/release/hgrep.bash", "usr/share/bash-completion/completions/hgrep", "644"],
]
