[package]
name = "hgrep-bench"
version = "0.0.0"
edition = "2018"
publish = false
license = "MIT"

[lib]
bench = false

[dependencies]
hgrep = { path = ".." }
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = "0.3"
gag = "1"
rayon = "1.5"

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "ripgrep"
harness = false

[[bench]]
name = "printer"
harness = false

[[bench]]
name = "syntect"
harness = false
