[package]
name = "hgrep-bench"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
bench = false

[dependencies]
hgrep = { path = ".." }
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
gag = "1"
rayon = "1.7"

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "ripgrep"
harness = false

[[bench]]
name = "printer"
harness = false

[[bench]]
name = "syntect"
harness = false
