[package]
name = "hgrep-bench"
version = "0.0.0"
edition = "2018"
publish = false
license = "MIT"

[lib]
bench = false

[dependencies]
hgrep = { path = ".." }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "ripgrep"
harness = false

[[bench]]
name = "printer"
harness = false
